MOre games, better description, redme updates. need to be tested

--- a/todo
+++ b/todo
@@ -1,12 +1,20 @@
 todo 
-Publish to GH pages
+
+
+<!-- only home page works when refresh
+games need a reset to start(only if games needs that - decide based on game) - but count number of resets
+
+add a how to play description for each game.  -->
+
+
 Better Seo 
 test each games add improvements
-add next button to go to next level
-add more games 
 publish progress to facebook/insta/linked in etc ... 
 optimize
 blogs
+let ai to rate a gamer and give a good score.
+let users publish it to social medias
+let users share it to friends
 Add AI based games - Ai to respond to user input
 Add AI based games - Ai to generate questions
 Add AI based games - Ai to generate answers
