--- a/todo
+++ b/todo
@@ -6,7 +6,8 @@ games need a reset to start(only if games needs that - decide based on game) - b
 
 add a how to play description for each game.  -->
 
-
+All should be arrow functions
+Make the game page more attactive for kids - each game - add animation if needed, add actual buckets are similar matching with game. 
 Better Seo 
 test each games add improvements
 publish progress to facebook/insta/linked in etc ... 
