update UI of each game

--- a/todo
+++ b/todo
@@ -8,6 +8,7 @@ add a how to play description for each game.  -->
 
 All should be arrow functions
 Make the game page more attactive for kids - each game - add animation if needed, add actual buckets are similar matching with game. 
+Mobile support
 Better Seo 
 test each games add improvements
 publish progress to facebook/insta/linked in etc ... 
